release version 0.2.1, fix outgoing call issue on Jelly Bean