@@ -129,7 +129,7 @@ public class SeekBarPreference extends DialogPreference implements SeekBar.OnSee
 			if (shouldPersist()) {
 				persistInt(mValue);
 			}
-			callChangeListener(new Integer(mValue));
+			callChangeListener(Integer.valueOf(mValue));
 		}
 	}
 
